[package]
name = "yts-cli"
version = "0.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
prettytable = "0.10.0"
urlencoding = "1.0.0"
